--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,6 @@
 <string name="category_unknown">"Unknown"</string>
 <string name="category_not_safe">"Not safe to limit"</string>
 <string name="category_error">"Error"</string>
-<string name="alert_noiab_title">"Pro features unavailable"</string>
-<string name="alert_noiab_content">"There's a problem with In-App Billing.  This is usually because Lucky Patcher is installed, or the Play Store is Greenified.  <a href="http://forum.xda-developers.com/xposed/modules/mod-nlpunbounce-reduce-nlp-wakelocks-t2853874">Visit the forum</a> for support."</string>
 <string name="dialog_ok">"OK"</string>
 <string name="tasker_on">"On"</string>
 <string name="tasker_off">"Off"</string>
@@ -228,6 +226,6 @@ May you have a long [battery] life!
 <string name="tasker_task_alarm_regex">"REGEX"</string>
 <string name="tasker_choose_alarm_regex">"Adjust an alarm regex."</string>
 <string name="tasker_choose_wakelock_regex">"Adjust a wakelock regex."</string>
-
+<string name="app_moto">Control battery killing alarms, wakelocks and services</string>
 
 </resources>
